--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "title": "North American Meat Price Dashboard",
-  "subtitle": "Retail Prices in Ontario & Regional Comparisons",
+  "subtitle": "Retail Prices in Ontario & Regional Comparisons (per pound)",
   "charts": {
     "ontario-prices": "Ontario Meat Prices",
     "regional-comparison": "Regional Price Comparison",
